added error message popups and changed version to 1.1